<resources>
    <string name="app_name">Workout Reservation</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="workout_list">Workouts</string>
    <string name="add_workout">Add workout</string>
    <string name="my_workouts">My workouts</string>
    <string name="my_waitlists">My Waitlists</string>
    <string name="my_account">My Account</string>
    <string name="submit">Submit</string>
    <string name="reserve">Reserve</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="removeFromWaitlist">Remove from waitlist</string>
    <string name="add_to_waitlist">Add to waitlist</string>
    <string name="workout_reservation">Workout Reservation</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="account_balance">Account Balance</string>
    <string name="logOut">Log Out</string>
    <string name="update">Update</string>
    <string name="my_workout_list">example</string>
    <string name="signUp">Sign up</string>
    <string name="first_name">Name</string>
    <string name="family_name">Family name</string>
    <string name="phone_number">Phone number</string>
    <string name="workout_duration">Workout duration</string>
    <string name="workout_description">Workout description</string>
    <string name="credits_available">Credits available</string>
    <string name="clients_list">Clients list</string>
    <string name="add_credits">Add credits</string>
    <string name="administrator_rights">Administrator rights</string>
    <string name="report">Report</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="reset">Reset</string>
    <string name="resetText">Please enter your e-mail. New password will be sent to your mail box.</string>
</resources>
