<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/workoutsListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_list" />

        <Button
            android:id="@+id/addWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_workout" />

        <Button
            android:id="@+id/myWorkoutsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_workouts" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_waitlists"
            android:id="@+id/myWaitlistsButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:id="@+id/myAccountButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clients_list"
            android:id="@+id/clientsListButton"/>

    </LinearLayout>
</layout>
