<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userDataFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#CCEEEEEE">

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="@string/first_name"
                tools:text="Vardas " />

            <EditText
                android:id="@+id/userFamilyNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:hint="@string/family_name"
                tools:text="Pavarde " />
        </LinearLayout>

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"

            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="@id/userNameLayout"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout"
            app:layout_constraintVertical_bias="0.0"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:text="vardas.pavarde@email.lt" />

        <EditText
            android:id="@+id/userPhoneEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/userNameLayout"
            app:layout_constraintTop_toBottomOf="@id/userEmailEditText"
            app:layout_constraintVertical_bias="0.0"
            android:hint="@string/phone_number"
            tools:text="+370 655 55555" />

        <EditText
            android:id="@+id/userPasswordEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/userNameLayout"
            app:layout_constraintTop_toBottomOf="@id/userPhoneEditText"
            app:layout_constraintVertical_bias="0.0"
            android:hint="@string/password"
            tools:text="@string/password" />

        <Button
            android:id="@+id/updateUserInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="#111111"
            android:padding="5dp"
            android:text="@string/update"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@id/userPasswordEditText"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="#111111"
            android:padding="5dp"
            android:text="@string/signUp"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="@id/userPasswordEditText"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPasswordEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
