<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:orientation="vertical"


        >

        <EditText
            android:id="@+id/userEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/email"
            android:padding="10dp"
            android:backgroundTint="#CCEEEEEE"

            tools:text="Email" />

        <EditText
            android:id="@+id/userPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#CCEEEEEE"

            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:text="Password"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#111111"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#999999"
                android:padding="5dp"
                android:text="@string/signUp"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>
</layout>
