<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:backgroundTint="#CCEEEEEE"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/resetText"
            tools:text="@string/resetText" />

        <EditText
            android:id="@+id/userEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:backgroundTint="#CCEEEEEE"
            android:gravity="center"
            android:hint="@string/email"
            android:padding="10dp"
            tools:text="Email" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#111111"
            android:padding="5dp"
            android:text="@string/reset"
            android:textColor="#ffffff" />

    </LinearLayout>
</layout>
