<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userBalanceUpdateFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#CCEEEEEE">


        <TextView
            android:id="@+id/userNameText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"

            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Vardas Pavardė" />

        <TextView
            android:id="@+id/userEmailText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"

            android:padding="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/userNameText"
            app:layout_constraintTop_toBottomOf="@id/userNameText"
            app:layout_constraintVertical_bias="0.0"
            tools:text="vardas.pavarde@email.lt" />

        <TextView
            android:id="@+id/userPhoneText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"

            android:padding="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/userNameText"
            app:layout_constraintTop_toBottomOf="@id/userEmailText"
            app:layout_constraintVertical_bias="0.0"
            tools:text="+370 655 55555" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/browser_actions_divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPhoneText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            app:layout_constraintBottom_toTopOf="@id/balanceText"
            app:layout_constraintStart_toStartOf="@id/balanceText" />

        <TextView
            android:id="@+id/balanceText"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/userPhoneText"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPhoneText"
            app:layout_constraintVertical_bias="0.283"
            tools:text="20 credits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_credits"
            app:layout_constraintBottom_toTopOf="@id/addCreditsEditText"
            app:layout_constraintStart_toStartOf="@id/addCreditsEditText" />

        <EditText
            android:id="@+id/addCreditsEditText"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textSize="20sp"
           android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="@id/balanceText"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@id/balanceText"
            app:layout_constraintVertical_bias="0.283"
            tools:text="20" />

        <Button
            android:id="@+id/addCreditsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#888888"
            android:padding="5dp"
            android:text="@string/add_credits"
            android:textColor="#ffffff"
            app:layout_constraintStart_toEndOf="@id/addCreditsEditText"
            app:layout_constraintTop_toTopOf="@id/addCreditsEditText" />

        <Button
            android:id="@+id/reportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#111111"
            android:padding="5dp"
            android:text="@string/report"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="@id/addCreditsButton"
            app:layout_constraintEnd_toEndOf="@+id/addCreditsButton"
            app:layout_constraintTop_toBottomOf="@id/addCreditsButton" />


        <CheckBox
            android:id="@+id/rightsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#000000"
            app:layout_constraintStart_toStartOf="@id/balanceText"
            app:layout_constraintTop_toBottomOf="@id/balanceText"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/rightsCheckBox"
            app:layout_constraintTop_toTopOf="@id/rightsCheckBox"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:text="@string/administrator_rights"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
